2003-11-13    <mschimek@users.sf.net>

	* src: New misc.h from 0.3 branch.

2003-10-30	<mschimek@users.sf.net>

	* autogen.sh, m4/autogen.sh: Updated.

2003-10-21	<mschimek@users.sf.net>

	* Release 0.2.5.

2003-10-20	<mschimek@users.sf.net>

	* configure.in, Makefile.am, src/Makefile.am, daemon:
	  Proxy code is not ready for release, moved to a separate
	  branch.
	* src/io-v4l2.c: No workee. Restored 0.2.4 i/o code.
	* src/caption.c, src/teletext.c, src/vbi.c,
	  src/io-bktr.c: FreeBSD 5 compile fixes.
	* Cleanup.

2003-10-16	<mschimek@users.sf.net>

	* src/bcd.h (vbi_dec2bcd, vbi_bcd2dec, vbi_add_bcd,
	  vbi_is_bcd): Corrected documentation. 

2003-10-14      <mschimek@users.sf.net>

	* src/packet.c, src/trigger.c: Fixed unsafe use of strncpy.
	* daemon/zvbid.init.in: Added. Just an example for
	  packagers, I cannot create an init script for each distro
	  out there.
	* daemon/Makefile.am: Changed target ./proxyd to
	  @sbindir@/zvbid. 'proxyd' was a bit too general. 

2003-10-09      <mschimek@users.sf.net>

	* src/exp-txt.c, src/io-v4l2.c, src/io-v4l2k.c:
	  x86-64 fixes by Gwenole Beauchesne, submitted by
	  Thierry Vignaud of MandrakeSoft.

2003-06-07      <tomzo@users.sf.net>

        Periodic check-in for ongoing proxy implementation:
        * src/proxy-msg.c: Optimized client/server message I/O via socket.
        * daemon/proxyd.c: Added command line option -kill; Added devfs
          support (use /dev/v4l/vbi as default device if it exists.)
        Note: Changes in protocol require re-compilation of proxy clients.

2003-06-01      <tomzo@users.sf.net>

        Periodic check-in for ongoing proxy implementation:
        * src/io-proxy.c: Redesigned internal message handling, i.e. switched
          from an event-driven model to a synchronous, RPC-like model. Also
          added TV channel change RPC.
        * daemon/proxyd.c: Started implementation of server-side TV channel
          switching (still incomplete: switching works, but scheduling and