@@ -1,4 +1,9 @@
-$Id: BUGS,v 1.13 2003-02-16 18:57:41 mschimek Exp $
+$Id: BUGS,v 1.14 2004-01-02 07:46:09 mschimek Exp $
 
 * v4l and v4l2 i/o can ignore timeout parameter
   > maybe a sleep() loop works, but what about timestamping?
+* drose:
+  "It turns out that zapping was pointing to /dev/vbi0, a symlink to
+   v4l/vbi0 and would never give me any pages.  Changing the link to
+   /dev/v4l/vbi0 (absolute reference) fixed the problem."
+  Maybe v4l device probing.
